fixed map drowdown on mobile

--- a/src/css/responsive.scss
+++ b/src/css/responsive.scss
@@ -78,7 +78,7 @@
         .content {
             padding-top: 1em;
         }
-        .select2-container {
+        .mapSelector {
             margin-top: 2em;
         }
         .results {
